--- a/style.css
+++ b/style.css
@@ -102,6 +102,17 @@ nav {
   .product-detail {
     width: 100%;
   }
+
+  .cards-container {
+    grid-template-columns: repeat(auto-fill, 140px);
+  }
+  .product-card {
+    width: 140px;
+  }
+  .product-card img {
+    width: 140px;
+    height: 140px;
+  }
 }
 @media (min-width: 766px){
   .mobile-menu{
@@ -122,6 +133,7 @@ nav {
   position: absolute;
   top: 60px;
   right: 55px;
+  background-color: var(--white);
 }
 .desktop-menu ul {
   list-style: none;
@@ -158,6 +170,7 @@ nav {
   position: absolute;
   top: 58px;
   left: 0px;
+  background-color: var(--white);
 }
 .mobile-menu a {
   text-decoration: none;
@@ -193,6 +206,7 @@ nav {
   box-sizing: border-box;
   position: absolute;
   right: 0;
+  background-color: var(--white);
 }
 .title-container {
   display: flex;
@@ -260,4 +274,48 @@ nav {
   font-size: var(--md);
   font-weight: bold;
   height: 50px;
+}
+
+/* cards */
+
+.cards-container {
+  margin-top: 24px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 240px);
+  gap: 26px;
+  place-content: center;
+}
+.product-card {
+  width: 240px;
+}
+.product-card img {
+  width: 240px;
+  height: 240px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+.product-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 12px;
+}
+.product-info figure {
+  margin: 0;
+}
+.product-info figure img {
+  width: 35px;
+  height: 35px;
+}
+.product-info div p:nth-child(1) {
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+.product-info div p:nth-child(2) {
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--very-light-pink);
 }
