--- a/style.css
+++ b/style.css
@@ -113,6 +113,10 @@ nav {
     width: 140px;
     height: 140px;
   }
+
+  .product-detail-item{
+    width:100%;
+  }
 }
 @media (min-width: 766px){
   .mobile-menu{
@@ -170,6 +174,7 @@ nav {
   position: absolute;
   top: 58px;
   left: 0px;
+  width: 100%;
   background-color: var(--white);
 }
 .mobile-menu a {
@@ -287,6 +292,7 @@ nav {
 }
 .product-card {
   width: 240px;
+  cursor: pointer;
 }
 .product-card img {
   width: 240px;
@@ -318,4 +324,73 @@ nav {
   margin-top: 0;
   margin-bottom: 0;
   color: var(--very-light-pink);
+}
+
+/* Product Detail Item */
+
+.product-detail-item {
+  width: 400px;
+  padding-bottom: 24px;
+  position: absolute;
+  background-color: var(--white);
+  top: 62px;
+  right: 0;
+  border: 2px solid black;
+}
+.product-detail-item-close {
+  background: var(--white);
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  z-index: 2;
+  padding: 12px;
+  border-radius: 50%;
+}
+.product-detail-item-close:hover {
+  cursor: pointer;
+}
+.product-detail-item > img:nth-child(2) {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 0 0 20px 20px;
+}
+.product-info-item {
+  margin: 24px 24px 0 24px;
+}
+.product-info-item p:nth-child(1) {
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+.product-info-item p:nth-child(2) {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.product-info-item p:nth-child(3) {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+}
+.add-to-cart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
